[레거시 코드 리팩터링 - 2단계] 라쿤(이병훈) 미션 제출합니다. (#304)
* refactor: 도메인 JPA 변환

* refactor: dao 삭제 및 Product 리팩토링

* refactor: Order 관련 서비스 JPA 적용 및 리팩토링

* refactor: 불필요 import 제거

* refactor: Menu 관련 JPA 적용 및 서비스 리팩토링

* refactor: Order 관련 리팩토링

* refactor: TableGroup JPA 적용 및 리팩토링

* test: 테스트 코드 통과하도록 변경

* refactor: 패키지 변경 및 메소드 이동

* refactor: OrderService 리팩토링

* refactor: MenuService 리팩토링

* refactor: Table~Order 리팩토링

* refactor: TestFixture 방식 변경

* refactor: OrderServiceTest 리팩토링

* refactor: Table 테스트 리팩토링

* refactor: 전체적인 코드 수정 및 MappedBy 방향 변경

* refactor: 불필요 setter 제거

* test: Product 테스트 코드 작성

* test: order 테스트 코드 작성

* test: menu 테스트 코드 작성

* test: menuproduct 테스트 코드 작성

* test: ordertable, tablegroup에 대한 테스트 작성

* refactor: Price 값객체 추출